--- a/iotest/src/main/resources/templates/welcome.html
+++ b/iotest/src/main/resources/templates/welcome.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <link rel="icon" href="/images/favicon.ico"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="/images/favicon.ico" />
 
     <title>IOTEST</title>
 
@@ -30,15 +30,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">接口测试工具</a>
+          <a class="navbar-brand" href="/">接口测试工具</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">概览</a></li>
-            <li><a href="#">设置</a></li>
-            <li><a href="#">POMP</a></li>
-            <li><a href="#">CSS1/CSS2</a></li>
-            <li><a href="#">帮助</a></li>
+            <li><a href="#">MCMS</a></li>
+            <li><a href="#">BCSS</a></li>
+            <li><a href="req0201">POMP</a></li>
+            <li><a href="req0101">CSS1/CSS2</a></li>
+            <li><a href="#">POP</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="查找.."/>
@@ -51,7 +51,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">充值记录查询接口</a></li>
+            <li ><a href="req0101.html">充值记录查询接口</a></li>
             <li><a href="#">消费记录查询接口</a></li>
             <li><a href="#">用户帐号查询接口</a></li>
             <li><a href="#">业务，渠道暂停请求接口</a></li>
