http请求返回乱码ok

--- a/iotest/src/main/resources/templates/welcome.html
+++ b/iotest/src/main/resources/templates/welcome.html
@@ -51,10 +51,11 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li ><a href="req0101.html">充值记录查询接口</a></li>
-            <li><a href="#">消费记录查询接口</a></li>
-            <li><a href="#">用户帐号查询接口</a></li>
-            <li><a href="#">业务，渠道暂停请求接口</a></li>
+            <li class="active"><a href="#">接口测试</a></li>
+            <li><a href="#">功能测试</a></li>
+            <li><a href="#">性能测试</a></li>
+            <li><a href="#">回归测试</a></li>
+            <li><a href="#">服务器监控</a></li>
           </ul>
           
         </div>
