--- a/iotest/src/main/resources/templates/req0201.html
+++ b/iotest/src/main/resources/templates/req0201.html
@@ -64,7 +64,7 @@
             <form  th:object="${jsonRequest}" id="io0201"  method="post" role="form">
             
                 <div class="form-group">
-                    <label for="req_header" >URL链接</label>
+                    <label for="json_request_url" >URL链接</label>
                     <br />
                     <textarea rows="1"  cols="150 "  name="jsonRequestUrl" th:field="${jsonRequest.jsonRequestUrl}" form="io0201"></textarea>
                  </div>
