--- a/iotest/src/main/resources/templates/welcome.html
+++ b/iotest/src/main/resources/templates/welcome.html
@@ -34,11 +34,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">MCMS</a></li>
-            <li><a href="#">BCSS</a></li>
             <li><a href="req0201">POMP</a></li>
             <li><a href="req0101">CSS1/CSS2</a></li>
-            <li><a href="#">POP</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="查找.."/>
@@ -51,11 +48,8 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">接口测试</a></li>
-            <li><a href="#">功能测试</a></li>
-            <li><a href="#">性能测试</a></li>
-            <li><a href="#">回归测试</a></li>
-            <li><a href="#">服务器监控</a></li>
+            <li class="active"><a href="#">接口测试结果</a></li>
+
           </ul>
           
         </div>
