--- a/iotest/src/main/resources/templates/req0201auto.html
+++ b/iotest/src/main/resources/templates/req0201auto.html
@@ -48,42 +48,31 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">渠道运营位接口（HTTP/JSON）</a></li>
-            <li><a href="#">活动发布消息接口（JMS）</a></li>
-            <li><a href="req0201auto">自动测试</a></li>
+            <li ><a href="req0201">渠道运营位接口（HTTP/JSON）</a></li>
+            <li><a href="req0202">活动发布消息接口（JMS）</a></li>
+            <li  class="active"><a href="req0201auto">POMP接口自动测试</a></li>
           </ul>
           
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h3 class="page-header">渠道运营位接口（HTTP/JSON）</h3>
+          <h3 class="page-header">POMP接口自动测试</h3>
 
-            <form  th:object="${jsonRequest}" id="io0201"  method="post" role="form">
+            <form  th:object="${jsonRequest}" id="io0201auto"  method="post" role="form">
             
-                <div class="form-group">
-                    <label for="json_request_url" >URL链接</label>
-                    <br />
-                    <textarea rows="1"  cols="150 "  name="jsonRequestUrl" th:field="${jsonRequest.jsonRequestUrl}" form="io0201"></textarea>
-                 </div>
-                 
-                <div class="form-group">
-                    <label for="req_header" >Json内容</label>
-                    <br />
-                    <textarea rows="10"  cols="150 "  name="jsonRequestData" th:field="${jsonRequest.jsonRequestData}" form="io0201"></textarea>
-                 </div>
-                
             
                 
-                <button type="submit" class="btn btn-default" >提交查询</button>
+                <select name="testItem" id="test" th:field="${jsonRequest.name}">
+                	<option value="req0201a1">渠道运营位接口</option>
+                	<option value="req0201a2">省市编码接口</option>
+                	<option value="req0201a3"></option>
+                	<option value="req0201all">全部</option>
+                </select>
+                <button type="submit" class="btn btn-default" >开始自动测试</button>
             </form>
             
             
         </div>
-        
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h3 class="page-header">返回结果</h3>
-            <textarea rows="10"  cols="150"  name="jsonResponse" th:field="${jsonRequest.jsonResponse}" ></textarea>
-          
-        </div>
+
       </div>
     </div>
 
