--- a/iotest/src/main/resources/templates/req0201auto.html
+++ b/iotest/src/main/resources/templates/req0201auto.html
@@ -64,7 +64,9 @@
                 <select name="testItem" id="test" th:field="${jsonRequest.name}">
                 	<option value="req0201a1">渠道运营位接口</option>
                 	<option value="req0201a2">省市编码接口</option>
-                	<option value="req0201a3"></option>
+                	<option value="req0201a3">活动发布通知</option>
+                	<option value="req0201a4">活动关闭通知</option>
+                	<option value="req0201a5">活动下线通知</option>
                 	<option value="req0201all">全部</option>
                 </select>
                 <button type="submit" class="btn btn-default" >开始自动测试</button>
