--- a/iotest/src/main/resources/templates/req0201auto.html
+++ b/iotest/src/main/resources/templates/req0201auto.html
@@ -67,12 +67,29 @@
                 	<option value="req0201a3">活动发布通知</option>
                 	<option value="req0201a4">活动关闭通知</option>
                 	<option value="req0201a5">活动下线通知</option>
+                	<option value="req0201a6">消息接受反馈接口</option>
+                	<option value="req0201a7">活动状态变更接口</option>
                 	<option value="req0201all">全部</option>
                 </select>
                 <button type="submit" class="btn btn-default" >开始自动测试</button>
             </form>
             
-            
+            <div th:if="${result == 'PASS'}">
+            	<p>测试通过</p>
+            	<br/>
+            	<h3 th:text="${jsonRequest.name}">接口名称</h3>
+            	<h4>请求地址</h4>
+            	<h4>请求数据</h4>
+            	<h4>返回结果</h4>
+            </div>
+            <div th:if="${result == 'NG'}">
+            	<p>测试不通过</p>
+            	<h3 th:text="${jsonRequest.name}">接口名称</h3>
+            	<h4>请求地址</h4>
+            	<h4>请求数据</h4>
+            	<h4>预期结果</h4>
+            	<h4>返回结果</h4>
+            </div>
         </div>
 
       </div>
