--- a/iotest/src/main/resources/templates/req0201auto.html
+++ b/iotest/src/main/resources/templates/req0201auto.html
@@ -62,33 +62,66 @@
             
                 
                 <select name="testItem" id="test" th:field="${jsonRequest.name}">
-                	<option value="req0201a1">渠道运营位接口</option>
-                	<option value="req0201a2">省市编码接口</option>
+                	<option value="opPositionQuery">渠道运营位接口</option>
+                	<option value="provCityCodeQuery">省市编码接口</option>
                 	<option value="req0201a3">活动发布通知</option>
                 	<option value="req0201a4">活动关闭通知</option>
                 	<option value="req0201a5">活动下线通知</option>
-                	<option value="req0201a6">消息接受反馈接口</option>
-                	<option value="req0201a7">活动状态变更接口</option>
+                	<option value="msgReceiveFeedback">消息接受反馈接口</option>
+                	<option value="activityStatusUpdate">活动状态变更接口</option>
+                	<option value="iopActivityQuery">IOP实时查询接口</option>
+                	<option value="actEffectFeedback">活动效果反馈接口</option>
                 	<option value="req0201all">全部</option>
                 </select>
                 <button type="submit" class="btn btn-default" >开始自动测试</button>
             </form>
             
-            <div th:if="${result == 'PASS'}">
+            <div  th:if="${result == 'PASS'}">
             	<p>测试通过</p>
             	<br/>
-            	<h3 th:text="${jsonRequest.name}">接口名称</h3>
-            	<h4>请求地址</h4>
-            	<h4>请求数据</h4>
-            	<h4>返回结果</h4>
+            	<table class="table table-striped">
+            		<thead>
+            			<tr>
+            				<th >接口名称</th>
+            				<th >请求地址</th>
+            				<th >请求数据</th>
+            				<th >预期结果</th>
+            				<th >返回结果</th>
+            			</tr>
+            		</thead>
+            		<tbody>
+            			<tr>
+	            			<td  th:text="${jsonRequest.name}">[name]</td>
+	            			<td  th:text="${jsonRequest.jsonRequestUrl}">[url]</td>
+	            			<td  th:text="${jsonRequest.jsonRequestData}">[request]</td>
+	            			<td  th:text="${jsonRequest.jsonResponse}">[response]</td>
+	            			<td  th:text="${realResponse}">[res] </td>
+            			</tr>
+            		</tbody>
+            	</table>
             </div>
             <div th:if="${result == 'NG'}">
             	<p>测试不通过</p>
-            	<h3 th:text="${jsonRequest.name}">接口名称</h3>
-            	<h4>请求地址</h4>
-            	<h4>请求数据</h4>
-            	<h4>预期结果</h4>
-            	<h4>返回结果</h4>
+            	<table class="table table-striped">
+            		<thead>
+            			<tr>
+            				<th >接口名称</th>
+            				<th >请求地址</th>
+            				<th >请求数据</th>
+            				<th >预期结果</th>
+            				<th >返回结果</th>
+            			</tr>
+            		</thead>
+            		<tbody>
+            			<tr>
+	            			<td th:text="${jsonRequest.name}">[name]</td>
+	            			<td th:text="${jsonRequest.jsonRequestUrl}">[url]</td>
+	            			<td th:text="${jsonRequest.jsonRequestData}">[request]</td>
+	            			<td th:text="${jsonRequest.jsonResponse}">[expected response]</td>
+	            			<td th:text="${realResponse}">[res] </td>
+            			</tr>
+            		</tbody>
+            	</table>
             </div>
         </div>
 
