--- a/iotest/src/main/resources/templates/req0201.html
+++ b/iotest/src/main/resources/templates/req0201.html
@@ -49,7 +49,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">渠道运营位接口（HTTP/JSON）</a></li>
-            <li><a href="#">活动发布消息接口（JMS）</a></li>
+            <li><a href="req0202">活动发布消息接口（JMS）</a></li>
             <li><a href="req0201auto">自动测试</a></li>
           </ul>
           
